Fixed Invisible Bug

--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,6 @@
 	position: relative;
 	margin: 0; 
 	padding: 0; 
-	top: 0;
-	left: 0; 
 }
 
 #clickBlocker {
